Add: Animations to sections in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Robin Hobb Fan Page</title>
   </head>
   <body>
-    <header>
+    <header class="bg-white-700">
       <a href="index.html">
         <h1
           id="logo"
@@ -33,15 +33,15 @@
           Robin Hobb
         </h1>
       </a>
-      <nav class="space-x-2 m-14 text-purple-800">
+      <nav class="space-x-2 py-3 text-purple-800">
         <ul id="menu-bar">
           <li><a href="meetups.html" class="active">Meetups</a></li>
           <li><a href="collection.html" class="active">Collection</a></li>
           <li><a href="index.html" class="active">Home</a></li>
         </ul>
       </nav>
-      <div class="mb-4 mt-6" id="slideElement" class="hidden">
-        <p class="megan text-2lg text-gray-700 text-opacity-90">
+      <div class="p-2 " id="slideElement">
+        <p class="megan pt-4 text-2lg text-gray-700 text-opacity-90">
           A pseudonym used by Megan Lindholm
         </p>
       </div>
@@ -78,13 +78,13 @@
       <img
         src="assets/images/robin_hobb.jpg"
         alt="Circle Image"
-        class="w-58 h-58 rounded-full object-cover mx-4 mb-5"
+        class="w-58 h-58 rounded-full object-cover my-7 shadow-xl"
         data-aos="zoom-out-up"
         data-aos-duration="3000"
       />
     </div>
-    <h3 class="text-6xl font-semibold m-2 biography">Biography</h3>
-    <div class="text-2xl m-11">
+    <h3 class="text-6xl font-semibold m-2 biography bg-gray-100 bg-opacity-40">Biography</h3>
+    <div class="text-2xl m-11 bg-green-100 bg-opacity-40 shadow-xl p-14 rounded-lg">
       <p class="mr-4">
         Robin Hobb, an acclaimed American Fantasy novelist, is known for her
         remarkable Realm of the Elderlings series. Writing extensively under the
@@ -128,26 +128,26 @@
 
     <br />
 
-    <div class="flex flex-wrap justify-center" data-aos="flip-left" data-aos-duration="3000">
+    <div class="flex flex-wrap justify-center pb-8" data-aos="flip-left" data-aos-duration="3000">
       <img src="assets/images/fool.jpeg" class="w-60 object-cover m-3" alt="">
       <img src="assets/images/apprentice.jpeg" class="w-60 object-cover m-3" alt="">
       <img src="assets/images/molly.webp" class="w-60 object-cover m-3" alt="">
     </div>
 
-    <blockquote class="border-l-4 border-blue-500 bg-gray-100 p-4 my-4">
+    <!-- <blockquote class="border-l-4 border-blue-500 bg-gray-100 p-4 my-4 mb-9">
       <p class="text-lg italic text-gray-800">
         "Before you kill him, think of what you take from him. Remember what it
         is to be alive."
       </p>
       <cite class="block text-right mt-2 text-gray-600">— Nighteyes in "Fool's Errand"</cite>
-    </blockquote>
+    </blockquote> -->
 
-    <div class="bg-gradient-to-b from-purple-200 to-green-100 py-8">
+    <div class="bg-gradient-to-b from-purple-200 to-green-100 py-8 bg-opacity-50">
       <div class="container mx-auto px-4">
-        <h2 class="text-3xl font-semibold mb-8 text-center text-white">Reader Reviews</h2>
+        <h2 class="text-3xl font-bold mb-8 text-center text-white">Reader Reviews</h2>
         <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
           <!-- Review Card 1 -->
-          <div class="bg-white rounded-lg shadow-md p-6">
+          <div class="bg-white rounded-lg shadow-md p-6" data-aos="fade-right" data-aos-duration="3000">
             <p class="text-black-800 text-lg italic">
               "Hobb is a remarkable storyteller"
             </p>
@@ -155,7 +155,7 @@
           </div>
     
           <!-- Review Card 2 -->
-          <div class="bg-white rounded-lg shadow-md p-6">
+          <div class="bg-white rounded-lg shadow-md p-6" data-aos="fade-down" data-aos-duration="3000">
             <p class="text-black-800 text-lg italic">
               "Hobb is one of the great modern fantasy writers"
             </p>
@@ -163,7 +163,7 @@
           </div>
     
           <!-- Review Card 3 -->
-          <div class="bg-white rounded-lg shadow-md p-6">
+          <div class="bg-white rounded-lg shadow-md p-6" data-aos="fade-left" data-aos-duration="3000">
             <p class="text-black-800 text-lg italic">
               "Fantasy as it ought to be written"
             </p>
