--- a/collection.html
+++ b/collection.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tribute page for the author Robin Hobb">
-    <meta name="keywords" content="robin hobb, fantasy books, middle earth, dragons">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="favicon.ico"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Tribute page for the author Robin Hobb" />
+    <meta
+      name="keywords"
+      content="robin hobb, fantasy books, middle earth, dragons"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="assets/script.js"></script>
+    <link
+      href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css"
+      rel="stylesheet"
+    />
+
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Robin Hobb Fan Page</title>
-</head>
+  </head>
 <body>
     <header>
         <a href="index.html">
@@ -67,23 +80,66 @@
     </div>
     </div>
 </section>
-<footer>
-    <h2>Find out more about Robin Hobb!</h2>
-    <ul class="social-networks">
+<footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+    <div
+      class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+    >
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+        >© 2023
+        <a
+          href="https://flowbite.com/"
+          class="transform hover:scale-135 transition-all"
+          >Robin Hobb Fan Page</a
+        >. All Rights Reserved.
+      </span>
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+        <a
+          href="https://flowbite.com/"
+          class="transform hover:scale-135 transition-all"
+          >Projects by Jody Murray</a
+        >
+      </span>
+      <ul
+        class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+      >
         <li>
-            <a href="https://www.facebook.com/robin.hobb" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Facebook page (opens in new tab)">
-                <i class="fa-brands fa-facebook-f"></i></a></li>
+          <a
+            href="https://www.linkedin.com/in/jody-murray-4b6818234/"
+            target="_blank"
+            class="mr-4 hover:underline md:mr-6"
+            >Linkedin</a
+          >
+        </li>
         <li>
-            <a href="http://www.robinhobb.com/" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's blog (opens in new tab)">
-                <i class="fa-solid fa-blog"></i></a></li>
+          <a
+            href="https://github.com/JodyMurray"
+            class="mr-4 hover:underline md:mr-6"
+            >GitHub</a
+          >
+        </li>
         <li>
-            <a href="https://www.amazon.com/Robin-Hobb/e/B000AP7LIY" target="_blank" rel="noopener" aria-label="Visit Amazon to buy her books (opens in new tab)">
-                <i class="fa-brands fa-amazon"></i></a></li>
-        <li>
-            <a href="https://www.instagram.com/therealrobinhobb/?hl=en" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Instagram page (opens in new tab)">
-                <i class="fa-brands fa-instagram"></i></a></li>
-</footer>
+          <a href="mailto:jodyamm@hotmail.com" class="hover:underline"
+            >Send Email</a
+          >
+        </li>
+      </ul>
+    </div>
+  </footer>
 <!-- font awesome script -->
-<script src="https://kit.fontawesome.com/205330c142.js" crossorigin="anonymous"></script>
+<script
+src="https://kit.fontawesome.com/205330c142.js"
+crossorigin="anonymous"
+></script>
+<script
+src="https://cdnjs.cloudflare.com/ajax/libs/script.js/2.0.2/script.min.js"
+integrity="sha512-UWtTDM6wtl/qutDD6i1JOGZGiEd92dveVzuLl8sMBkMHlOHcbZdexM7ZrKkeaugW7vhqDnWc2pPD/ohEV+BBbg=="
+crossorigin="anonymous"
+referrerpolicy="no-referrer"
+></script>
+<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+<!-- script to initialize animation library -->
+<script>
+AOS.init();
+</script>
 </body>
 </html>
