Fix: Padding issues in navbar and change background colour

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
       rel="stylesheet"
     />
 
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/assets/images/favicon.ico" />
     <title>Robin Hobb Fan Page</title>
   </head>
   <body>
-    <header class="bg-white-700">
+    <header class="bg-green-100 nav h-full">
       <a href="index.html">
         <h1
           id="logo"
           class="text-4xl font-bold tracking-tight mx-6 sm:text-6xl"
         >
-          Robin Hobb
+          <img src="assets/images/logoRobin.png" class="" alt="">
         </h1>
       </a>
-      <nav class="space-x-2 py-3 text-purple-800">
+      <nav class="space-x-2 py-3 text-gray-800">
         <ul id="menu-bar">
           <li><a href="meetups.html" class="active">Meetups</a></li>
           <li><a href="collection.html" class="active">Collection</a></li>
@@ -41,7 +41,7 @@
         </ul>
       </nav>
       <div class="p-2 " id="slideElement">
-        <p class="megan pt-4 text-2lg text-gray-700 text-opacity-90">
+        <p class="megan pt-6 text-2lg text-gray-700 text-opacity-90">
           A pseudonym used by Megan Lindholm
         </p>
       </div>
