Add: Images next to list of books, change hero display on second page

--- a/collection.html
+++ b/collection.html
@@ -23,123 +23,193 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Robin Hobb Fan Page</title>
   </head>
-<body>
-    <header>
-        <a href="index.html">
-            <h1 id="logo">Robin Hobb</h1>
-        </a>
-        <nav>
-            <ul id="menu-bar">
-                <li><a href="meetups.html" class="active">Meetups</a></li>
-                <li><a href="collection.html" class="active">Collection</a></li>
-                <li><a href="index.html" class="active">Home</a></li>
-            </ul>
-        </nav>
-        <p class="megan">A pseudonym used by Megan Lindholm</p>
-            <hr>
-    </header>
-    <section>
-        <div id="castle">
-        </div>
-    </section>
-<section id="summary">
-    <h2 id="early-work">Robin Hobb's early work</h3>
-    <p>The Farseer novels were the first works written as Robin Hobb, a pseudonym of American author Margaret Astrid Lindholm Ogden. Her earlier writing appeared under the name Megan Lindholm, in the genres of urban fantasy and science fiction. 
-        Lindholm's work was critically well-received, including Hugo and Nebula Award nominations for her short fiction, but did not do as well in terms of sales. In 1995, the author shifted to writing secondary-world fantasy and adopted a new byline, Robin Hobb. 
-        This was an intentionally androgynous name chosen to match the Fitz novels, which were written in a first-person male narrative voice.
-        The series incubated over a number of years, with the core idea being: "What if magic were addictive? And what if the addiction was destructive or degenerative?". </p>
-</section>
-<section id="chronological">
-    <h2 id="order">In Chronological order:</h2>
-    <ul id="list">
-        <lh>The Farseer Trilogy</lh>
-        <hr>
-        <li>The trilogy follows the early life of FitzChivalry Farseer, illegitimate son of a prince and melancholy hero.</li>
-        <lh>The Liveship Traders Trilogy</lh>
-        <hr>
-        <li>At one time, possession of a Liveship, constructed of magical wizard wood, guaranteed a Trader's family prosperity. 
-            Only a Liveship can brave the dangers of the Rain Wild River and trade with the legendary Rain Wild Traders and their mysterious magical goods, plundered from the enigmatic Elderling ruins.</li>
-        <lh>The Tawny Man Trilogy</lh>
-        <hr>
-        <li>In an evolution of this narrative, the Tawny Man trilogy shifts focus from Fitz's personal struggle to the larger struggle for equal rights for the Witted. 
-            Fool's Errand features a group of Witted revolutionaries called the Piebalds, who attempt a military uprising against the Farseer throne.</li>
-        <lh>The Rain Wild Chronicals</lh>
-        <hr>
-        <li>The Rain Wilds Chronicles document a quest with world-changing consequences, but Hobb keeps the narrative focus on her characters. 
-            There are no pre-ordained outcomes or messianic Luke Skywalkers here, only people with their own problems to solve and their own journeys to adulthood and/or freedom to complete.</li>
-        <lh>Fitz and the Fool Trilogy</lh>
-        <hr>
-        <li>As Bee is dragged by her sadistic captors across half the world, Fitz and the Fool, believing her dead, 
-            embark on a mission of revenge that will take them to the distant island where the Servants reside—a place the Fool once called home and later called prison.</li>
-    </ul>
-    </section>
-    <section class="row2">
-    <div>
-    <div class="column2">
-        <img src="assets/images/total.jpeg" alt="collection of robin hobb books">
-    </div>
-    </div>
-</section>
-<footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
-    <div
-      class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
-    >
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-        >© 2023
-        <a
-          href="https://flowbite.com/"
-          class="transform hover:scale-135 transition-all"
-          >Robin Hobb Fan Page</a
-        >. All Rights Reserved.
-      </span>
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
-        <a
-          href="https://flowbite.com/"
-          class="transform hover:scale-135 transition-all"
-          >Projects by Jody Murray</a
+  <body>
+    <header class="bg-green-100 nav h-full">
+      <a href="index.html">
+        <h1 id="logo" class="text-4xl font-bold tracking-tight sm:text-6xl">
+          <img src="assets/images/logoRobin.png" class="" alt="" />
+        </h1>
+      </a>
+      <nav class="space-x-2 py-3 text-gray-800">
+        <ul id="menu-bar">
+          <li><a href="meetups.html" class="active">Meetups</a></li>
+          <li><a href="collection.html" class="active">Collection</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+        </ul>
+      </nav>
+      <div class="p-4" id="slideElement">
+        <p
+          class="megan pt-6 w-100 text-2lg text-gray-700 text-opacity-90 whitespace-nowrap"
         >
-      </span>
-      <ul
-        class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+          A pseudonym used by Megan Lindholm
+        </p>
+      </div>
+    </header>
+    <section class="relative summary">
+      <div id="castle" class="w-full h-64 bg-cover bg-center"></div>
+      <div
+        class="absolute inset-0 flex flex-col items-center justify-center p-4 bg-black bg-opacity-40"
+        id="slideElement"
       >
-        <li>
-          <a
-            href="https://www.linkedin.com/in/jody-murray-4b6818234/"
-            target="_blank"
-            class="mr-4 hover:underline md:mr-6"
-            >Linkedin</a
-          >
+        <h2 id="early-work" class="text-4xl font-bold text-white mb-4">
+          Robin Hobb's early work
+        </h2>
+        <p class="text-white whitespace-wrap p-6 text-center">
+          The Farseer novels mark the debut of Robin Hobb, a pen name of
+          American author Margaret Astrid Lindholm Ogden. Previously, she wrote
+          under the name Megan Lindholm, exploring urban fantasy and science
+          fiction genres to critical acclaim, earning Hugo and Nebula Award
+          nominations for her short fiction. In 1995, she transitioned to
+          writing captivating secondary-world fantasy under the new pen name,
+          Robin Hobb. The name was chosen to match the Fitz novels, narrated in
+          a first-person male voice, exploring the theme of addictive and
+          destructive magic.
+        </p>
+      </div>
+    </section>
+    <section id="chronological" class="py-8">
+      <h2
+        id="order"
+        class="text-3xl text-center font-bold text-green-900 mb-4 mt-4"
+      >
+        The Collection:
+      </h2>
+      <ul id="list" class="space-y-4 text-center">
+        <li class="flex items-center space-x-6">
+          <img
+            src="assets/images/farseer.png"
+            class="w-28 h-28 rounded object-cover border-none"
+            alt=""
+            data-aos="flip-right"
+            data-aos-duration="2000"
+          />
+          <div>
+            <h3 class="text-2xl font-semibold">The Farseer Trilogy</h3>
+            <p>
+              The trilogy follows the early life of FitzChivalry Farseer,
+              illegitimate son of a prince and melancholy hero.
+            </p>
+          </div>
+        </li>
+        <li class="flex items-center space-x-6 flex-row-reverse">
+          <img
+            src="assets/images/liveship.jpeg"
+            class="w-28 h-28 rounded object-cover border-none"
+            alt=""
+            data-aos="flip-right"
+            data-aos-duration="2000"
+          />
+          <div>
+            <h3 class="text-2xl font-semibold">The Liveship Traders Trilogy</h3>
+            <p>
+              At one time, possession of a Liveship, constructed of magical
+              wizard wood, guaranteed a Trader's family prosperity. Only a
+              Liveship can brave the dangers of the Rain Wild River and trade
+              with the legendary Rain Wild Traders and their mysterious magical
+              goods, plundered from the enigmatic Elderling ruins.
+            </p>
+          </div>
         </li>
         <li>
-          <a
-            href="https://github.com/JodyMurray"
-            class="mr-4 hover:underline md:mr-6"
-            >GitHub</a
-          >
+          <h3 class="text-2xl font-semibold">The Tawny Man Trilogy</h3>
+          <p>
+            In an evolution of this narrative, the Tawny Man trilogy shifts
+            focus from Fitz's personal struggle to the larger struggle for equal
+            rights for the Witted. Fool's Errand features a group of Witted
+            revolutionaries called the Piebalds, who attempt a military uprising
+            against the Farseer throne.
+          </p>
         </li>
         <li>
-          <a href="mailto:jodyamm@hotmail.com" class="hover:underline"
-            >Send Email</a
-          >
+          <h3 class="text-2xl font-semibold">The Rain Wild Chronicles</h3>
+          <p>
+            The Rain Wild Chronicles document a quest with world-changing
+            consequences, but Hobb keeps the narrative focus on her characters.
+            There are no pre-ordained outcomes or messianic Luke Skywalkers
+            here, only people with their own problems to solve and their own
+            journeys to adulthood and/or freedom to complete.
+          </p>
+        </li>
+        <li>
+          <h3 class="text-2xl font-semibold">The Fitz and the Fool Trilogy</h3>
+          <p>
+            As Bee is dragged by her sadistic captors across half the world,
+            Fitz and the Fool, believing her dead, embark on a mission of
+            revenge that will take them to the distant island where the Servants
+            reside—a place the Fool once called home and later called prison.
+          </p>
         </li>
       </ul>
-    </div>
-  </footer>
-<!-- font awesome script -->
-<script
-src="https://kit.fontawesome.com/205330c142.js"
-crossorigin="anonymous"
-></script>
-<script
-src="https://cdnjs.cloudflare.com/ajax/libs/script.js/2.0.2/script.min.js"
-integrity="sha512-UWtTDM6wtl/qutDD6i1JOGZGiEd92dveVzuLl8sMBkMHlOHcbZdexM7ZrKkeaugW7vhqDnWc2pPD/ohEV+BBbg=="
-crossorigin="anonymous"
-referrerpolicy="no-referrer"
-></script>
-<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-<!-- script to initialize animation library -->
-<script>
-AOS.init();
-</script>
-</body>
+    </section>
+
+    <section class="row2">
+      <div class="column2">
+        <img
+          src="assets/images/total.jpeg"
+          alt="collection of robin hobb books"
+        />
+      </div>
+    </section>
+    <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+      <div
+        class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+      >
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+          >© 2023
+          <a
+            href="https://www.linkedin.com/in/jody-murray-4b6818234/"
+            class="transform hover:scale-135 transition-all"
+            >Robin Hobb Fan Page</a
+          >. All Rights Reserved.
+        </span>
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+          <a
+            href="https://github.com/JodyMurray"
+            class="transform hover:scale-135 transition-all"
+            >Projects by Jody Murray</a
+          >
+        </span>
+        <ul
+          class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+        >
+          <li>
+            <a
+              href="https://www.linkedin.com/in/jody-murray-4b6818234/"
+              target="_blank"
+              class="mr-4 hover:underline md:mr-6"
+              >Linkedin</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/JodyMurray"
+              class="mr-4 hover:underline md:mr-6"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a href="mailto:jodyamm@hotmail.com" class="hover:underline"
+              >Send Email</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
+    <!-- font awesome script -->
+    <script
+      src="https://kit.fontawesome.com/205330c142.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/script.js/2.0.2/script.min.js"
+      integrity="sha512-UWtTDM6wtl/qutDD6i1JOGZGiEd92dveVzuLl8sMBkMHlOHcbZdexM7ZrKkeaugW7vhqDnWc2pPD/ohEV+BBbg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <!-- script to initialize animation library -->
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
