--- a/collection.html
+++ b/collection.html
@@ -45,8 +45,10 @@
         </p>
       </div>
     </header>
-    <section class="relative summary">
-      <div id="castle" class="w-full h-64 bg-cover bg-center"></div>
+    <section class="relative">
+      <div>
+        <img src="assets/images/castle.jpeg" class="object-cover w-full h-full" alt="">
+      </div>
       <div
         class="absolute inset-0 flex flex-col items-center justify-center p-4 bg-black bg-opacity-40"
         id="slideElement"
