Add: animation for heading on collections hero section

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
     </div>
 
     <br />
-    <div class="bio-section" data-aos="zoom-out-up"
-    data-aos-duration="3000">
+    <div class="bio-section" data-aos="zoom-out-up" data-aos-duration="3000">
       <div id="circle">
         <img
           src="assets/images/robin_hobb.jpg"
@@ -84,7 +83,7 @@
       <h3
         class="text-6xl font-semibold m-2 biography bg-gray-100 bg-opacity-40"
         data-aos="flip-left"
-    data-aos-duration="3000"
+        data-aos-duration="3000"
       >
         Biography
       </h3>
