--- a/collection.html
+++ b/collection.html
@@ -47,13 +47,20 @@
     </header>
     <section class="relative">
       <div>
-        <img src="assets/images/castle.jpeg" class="object-cover w-full h-full" alt="">
+        <img
+          src="assets/images/castle.jpeg"
+          class="object-cover w-full h-full shadow-xl rounded border-black"
+          alt=""
+        />
       </div>
       <div
-        class="absolute inset-0 flex flex-col items-center justify-center p-4 bg-black bg-opacity-40"
+        class="absolute inset-0 flex flex-col items-center justify-center p-4 bg-black bg-opacity-40 typing-effect"
         id="slideElement"
       >
-        <h2 id="early-work" class="text-4xl font-bold text-white mb-4">
+        <h2
+          id="early-work"
+          class="text-4xl font-bold text-white mb-4 animated-text"
+        >
           Robin Hobb's early work
         </h2>
         <p class="text-white whitespace-wrap p-6 text-center">
