Edit: Grid for collection display

--- a/collection.html
+++ b/collection.html
@@ -76,14 +76,13 @@
         </p>
       </div>
     </section>
-    <section id="chronological" class="py-8">
+    <section id="chronological" class="py-8 px-4 sm:px-8 lg:px-16">
       <h2
-        id="order"
-        class="text-3xl text-center font-bold text-green-900 mb-4 mt-4"
+        class="text-3xl text-center font-bold text-green-800 mb-4 mt-4"
       >
-        The Collection:
+        The Collection
       </h2>
-      <ul id="list" class="space-y-4 text-center">
+      <ul id="list" class="grid gap-8 sm:grid-cols-2">
         <li class="flex items-center space-x-6">
           <img
             src="assets/images/farseer.png"
