Add: Section for further works of Robin Hobb

--- a/collection.html
+++ b/collection.html
@@ -77,9 +77,7 @@
       </div>
     </section>
     <section id="chronological" class="py-8 px-4 sm:px-8 lg:px-16">
-      <h2
-        class="text-3xl text-center font-bold text-green-800 mb-4 mt-4"
-      >
+      <h2 class="text-3xl text-center font-bold text-green-800 mb-4 mt-4">
         The Collection
       </h2>
       <ul id="list" class="grid gap-8 sm:grid-cols-2">
@@ -96,25 +94,6 @@
             <p>
               The trilogy follows the early life of FitzChivalry Farseer,
               illegitimate son of a prince and melancholy hero.
-            </p>
-          </div>
-        </li>
-        <li class="flex items-center space-x-6 flex-row-reverse">
-          <img
-            src="assets/images/liveship.jpeg"
-            class="w-28 h-28 rounded object-cover border-none"
-            alt=""
-            data-aos="flip-right"
-            data-aos-duration="2000"
-          />
-          <div>
-            <h3 class="text-2xl font-semibold">The Liveship Traders Trilogy</h3>
-            <p>
-              At one time, possession of a Liveship, constructed of magical
-              wizard wood, guaranteed a Trader's family prosperity. Only a
-              Liveship can brave the dangers of the Rain Wild River and trade
-              with the legendary Rain Wild Traders and their mysterious magical
-              goods, plundered from the enigmatic Elderling ruins.
             </p>
           </div>
         </li>
@@ -147,15 +126,86 @@
             reside—a place the Fool once called home and later called prison.
           </p>
         </li>
+        <li class="flex items-center space-x-8 flex-row">
+          <img
+            src="assets/images/liveship.jpeg"
+            class="w-28 h-28 rounded object-cover border-none"
+            alt=""
+            data-aos="flip-right"
+            data-aos-duration="2000"
+          />
+          <div>
+            <h3 class="text-2xl font-semibold">The Liveship Traders Trilogy</h3>
+            <p>
+              At one time, possession of a Liveship, constructed of magical
+              wizard wood, guaranteed a Trader's family prosperity. Only a
+              Liveship can brave the dangers of the Rain Wild River and trade
+              with the legendary Rain Wild Traders and their mysterious magical
+              goods, plundered from the enigmatic Elderling ruins.
+            </p>
+          </div>
+        </li>
       </ul>
     </section>
 
-    <section class="row2">
-      <div class="column2">
-        <img
-          src="assets/images/total.jpeg"
-          alt="collection of robin hobb books"
-        />
+    <section id="useful-links" class="py-8 px-4 sm:px-8 lg:px-16">
+      <h2 class="text-3xl text-center font-bold text-green-900 mb-4 mt-8">
+        Explore More Works:
+      </h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+        <a
+          href="#"
+          class="flex flex-col items-center space-y-2 text-center bg-white rounded-lg shadow-md p-4 hover:bg-green-100 transition duration-300"
+        >
+          <img
+            src="assets/images/inheritance.jpg"
+            alt="Book Title"
+            class="w-32 h-30 object-cover rounded-lg shadow-md"
+          />
+          <h3 class="text-lg font-semibold">The Inheritance</h3>
+          <p class="text-gray-600">
+            The Inheritance is a collection of short stories written by Robin
+            Hobb and her other pen name, Megan Lindholm. It contains several
+            short stories set in the Realm of the Elderlings.
+          </p>
+        </a>
+        <a
+          href="#"
+          class="flex flex-col items-center space-y-2 text-center bg-white rounded-lg shadow-md p-4 hover:bg-green-100 transition duration-300"
+        >
+          <img
+            src="assets/images/piebald.jpeg"
+            alt="Book Title"
+            class="w-32 h-35 object-cover rounded-lg shadow-md"
+          />
+          <h3 class="text-lg font-semibold">
+            The Wilful Princess and the Piebald Prince
+          </h3>
+          <p class="text-gray-600">
+            The Wilful Princess and the Piebald Prince is a great novella that
+            provided a great insight into the history of Farseer and The Wit.
+          </p>
+        </a>
+        <a
+          href="#"
+          class="flex flex-col items-center space-y-2 text-center bg-white rounded-lg shadow-md p-4 hover:bg-green-100 transition duration-300"
+        >
+          <img
+            src="assets/images/illustrated.jpg"
+            alt="Book Title"
+            class="w-32 h-30 object-cover rounded-lg shadow-md"
+          />
+          <h3 class="text-lg font-semibold">
+            Assassin's Apprentice Illustrated Edition
+          </h3>
+          <p class="text-gray-600">
+            A gorgeously illustrated anniversary edition of the book that
+            launched the epic Farseer Trilogy, praised by George RR Martin as
+            “fantasy as it ought to be written” and Lin-Manuel Miranda as “an
+            incredible series,”.
+          </p>
+        </a>
+        <!-- Add more links for each work -->
       </div>
     </section>
     <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
