Edit: Change section displaying book series'

--- a/collection.html
+++ b/collection.html
@@ -76,8 +76,75 @@
         </p>
       </div>
     </section>
-    <section id="chronological" class="py-8 px-4 sm:px-8 lg:px-16">
-      <h2 class="text-3xl text-center font-bold text-green-800 mb-4 mt-4">
+    <section id="book-series" class="py-8">
+      <h1 class="text-4xl font-bold text-center text-green-600 mt-8">
+        Begin your journey
+      </h1>
+
+      <div class="container mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Series 1 -->
+          <div class="bg-white p-4 shadow-md rounded-lg">
+            <img
+              src="assets/images/farseer.jpeg"
+              alt="Series 1"
+              class="w-full h-58 object-cover mb-2"
+            />
+            <h3 class="text-lg font-semibold">The Farseer Trilogy</h3>
+            <p class="text-gray-600">
+              The Farseer Trilogy by Robin Hobb is a classic series of epic
+              fantasy novels that follows the life and adventures of its
+              protagonist, FitzChivalry Farseer, in the fictional realm known as
+              the Six Duchies. The trilogy is renowned for its intricate
+              world-building and character development.
+            </p>
+          </div>
+
+          <!-- Series 2 -->
+          <div class="bg-white p-4 shadow-md rounded-lg">
+            <img
+              src="assets/images/tawnyman.jpg"
+              alt="Series 2"
+              class="w-full h-50 object-cover mb-2"
+            />
+            <h3 class="text-lg font-semibold">The Tawny Man Trilogy</h3>
+            <p class="text-gray-600">
+              The Tawny Man Trilogy by Robin Hobb is a captivating continuation
+              of the Farseer Saga, following FitzChivalry Farseer's return from
+              self-imposed exile. As he reunites with old friends and faces new
+              challenges, the trilogy delves deep into themes of loyalty, aging,
+              and the enduring bonds between characters. It's a masterfully
+              crafted tale of both personal and political intrigue set in a
+              richly detailed fantasy world.
+            </p>
+          </div>
+
+          <!-- Series 3 -->
+          <div class="bg-white p-4 shadow-md rounded-lg">
+            <img
+              src="assets/images/rainwilds.jpeg"
+              alt="Series 3"
+              class="w-full h-58 object-cover mb-2"
+            />
+            <h3 class="text-lg font-semibold">The Rain Wild Chronicles</h3>
+            <p class="text-gray-600">
+              The Rain Wild Chronicles by Robin Hobb is an enthralling
+              exploration of a lesser-known corner of her Elderlings world. This
+              four-book series follows a diverse group of characters as they
+              embark on a perilous journey along the treacherous Rain Wild
+              River. With themes of transformation, discovery, and the interplay
+              between humans and dragons, it weaves a compelling narrative
+              filled with richly imagined settings and engaging character
+              development.
+            </p>
+          </div>
+
+          <!-- Add more series as needed -->
+        </div>
+      </div>
+    </section>
+    <!-- <section id="chronological" class="py-8 px-4 sm:px-8 lg:px-16">
+      <h2 class="text-3xl text-left font-bold text-green-800 mb-4 mt-4">
         The Collection
       </h2>
       <ul id="list" class="grid gap-8 sm:grid-cols-2">
@@ -126,7 +193,7 @@
             reside—a place the Fool once called home and later called prison.
           </p>
         </li>
-        <li class="flex items-center space-x-8 flex-row">
+        <li class="flex items-center space-x-8 flex-row justify-center">
           <img
             src="assets/images/liveship.jpeg"
             class="w-28 h-28 rounded object-cover border-none"
@@ -146,7 +213,7 @@
           </div>
         </li>
       </ul>
-    </section>
+    </section> -->
 
     <section id="useful-links" class="py-8 px-4 sm:px-8 lg:px-16">
       <h2 class="text-3xl text-center font-bold text-green-900 mb-4 mt-8">
