Add: Book series chronologically

--- a/collection.html
+++ b/collection.html
@@ -88,7 +88,7 @@
             <img
               src="assets/images/farseer.jpeg"
               alt="Series 1"
-              class="w-full h-58 object-cover mb-2"
+              class="w-full h-80 object-fill mb-2"
             />
             <h3 class="text-lg font-semibold">The Farseer Trilogy</h3>
             <p class="text-gray-600">
@@ -99,32 +99,46 @@
               world-building and character development.
             </p>
           </div>
-
           <!-- Series 2 -->
           <div class="bg-white p-4 shadow-md rounded-lg">
             <img
-              src="assets/images/tawnyman.jpg"
-              alt="Series 2"
-              class="w-full h-50 object-cover mb-2"
+              src="assets/images/fitzandfool.jpg"
+              alt="Series 1"
+              class="w-full h-80 object-fill mb-2"
             />
-            <h3 class="text-lg font-semibold">The Tawny Man Trilogy</h3>
+            <h3 class="text-lg font-semibold">The Fitz and the Fool</h3>
             <p class="text-gray-600">
-              The Tawny Man Trilogy by Robin Hobb is a captivating continuation
-              of the Farseer Saga, following FitzChivalry Farseer's return from
-              self-imposed exile. As he reunites with old friends and faces new
-              challenges, the trilogy delves deep into themes of loyalty, aging,
-              and the enduring bonds between characters. It's a masterfully
-              crafted tale of both personal and political intrigue set in a
-              richly detailed fantasy world.
+              The "Fitz and the Fool" trilogy by Robin Hobb is a continuation of
+              the beloved Elderlings series, and it follows the adventures and
+              challenges faced by the character FitzChivalry Farseer, also known
+              as Fitz. In this trilogy, Fitz and his enigmatic friend, the Fool,
+              are reunited as they embark on a journey filled with political
+              intrigue, personal sacrifices, and the mystical connections that
+              bind them.
             </p>
           </div>
 
-          <!-- Series 3 -->
+          <div class="bg-white p-4 shadow-md rounded-lg">
+            <img
+              src="assets/images/liveship.jpg"
+              alt="Series 2"
+              class="w-full h-80 object-fill mb-2"
+            />
+            <h3 class="text-lg font-semibold">The Liveship Traders</h3>
+            <p class="text-gray-600">
+              The "Liveship Traders" trilogy by Robin Hobb is an epic fantasy
+              series that unfolds in a richly detailed world where sentient
+              ships, known as liveships, are central to the story. The trilogy
+              follows the lives and intertwining destinies of several families,
+              with a primary focus on the Vestrit family.
+            </p>
+          </div>
+          <!-- Series 4 -->
           <div class="bg-white p-4 shadow-md rounded-lg">
             <img
               src="assets/images/rainwilds.jpeg"
               alt="Series 3"
-              class="w-full h-58 object-cover mb-2"
+              class="w-full h-80 object-fill mb-2"
             />
             <h3 class="text-lg font-semibold">The Rain Wild Chronicles</h3>
             <p class="text-gray-600">
@@ -138,8 +152,40 @@
               development.
             </p>
           </div>
-
-          <!-- Add more series as needed -->
+          <!-- Series 3 -->
+          <div class="bg-white p-4 shadow-md rounded-lg">
+            <img
+              src="assets/images/tawnyman.jpg"
+              alt="Series 2"
+              class="w-full h-80 object-fill mb-2"
+            />
+            <h3 class="text-lg font-semibold">The Tawny Man Trilogy</h3>
+            <p class="text-gray-600">
+              The Tawny Man Trilogy by Robin Hobb is a captivating continuation
+              of the Farseer Saga, following FitzChivalry Farseer's return from
+              self-imposed exile. As he reunites with old friends and faces new
+              challenges, the trilogy delves deep into themes of loyalty, aging,
+              and the enduring bonds between characters. It's a masterfully
+              crafted tale of both personal and political intrigue set in a
+              richly detailed fantasy world.
+            </p>
+          </div>
+          <!-- Series 3 -->
+          <div class="bg-white p-4 shadow-md rounded-lg">
+            <img
+              src="assets/images/soldierson.jpg"
+              alt="Series 2"
+              class="w-full h-80 object-fill mb-2"
+            />
+            <h3 class="text-lg font-semibold">The Soldier Son</h3>
+            <p class="text-gray-600">
+              Nevare is the second son of a noble family, and his destiny seems
+              to be mapped out as a soldier in service to the king. However, his
+              life takes an unexpected turn when he becomes entangled with a
+              mysterious, ancient magic tied to the forest-dwelling indigenous
+              people known as the Specks.
+            </p>
+          </div>
         </div>
       </div>
     </section>
