Edit: Change image for farseer series

--- a/collection.html
+++ b/collection.html
@@ -86,7 +86,7 @@
           <!-- Series 1 -->
           <div class="bg-white p-4 shadow-md rounded-lg">
             <img
-              src="assets/images/farseer.jpeg"
+              src="assets/images/farseer.jpg"
               alt="Series 1"
               class="w-full h-80 object-fill mb-2"
             />
