--- a/meetups.html
+++ b/meetups.html
@@ -1,77 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tribute page for the author Robin Hobb">
-    <meta name="keywords" content="robin hobb, fantasy books, middle earth, dragons">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="favicon.ico"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Tribute page for the author Robin Hobb" />
+    <meta
+      name="keywords"
+      content="robin hobb, fantasy books, middle earth, dragons"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="assets/script.js"></script>
+    <link
+      href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css"
+      rel="stylesheet"
+    />
+
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Robin Hobb Fan Page</title>
-</head>
-<body>
-<header>
-    <a href="index.html">
-        <h1 id="logo">Robin Hobb</h1>
-    </a>
-    <nav>
+  </head>
+  <body>
+    <header class="bg-green-100 nav h-full">
+      <a href="index.html">
+        <h1 id="logo" class="text-4xl font-bold tracking-tight sm:text-6xl">
+          <img src="assets/images/logoRobin.png" class="" alt="" />
+        </h1>
+      </a>
+      <nav class="space-x-2 py-3 text-gray-800">
         <ul id="menu-bar">
-            <li><a href="meetups.html" class="active">Meetups</a></li>
-            <li><a href="collection.html" class="active">Collection</a></li>
-            <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="meetups.html" class="active">Meetups</a></li>
+          <li><a href="collection.html" class="active">Collection</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
         </ul>
-    </nav>
-    <p class="megan">A pseudonym used by Megan Lindholm</p>
-        <hr>
-</header>
-    <div class="book-club"></div>
-    <section class="meetup-section">
-        <form method="get" action="thankyou.html" class="meetup-section">
-            <p>Monthly meetups with likeminded Robin Hobb fans. If you're in the area, signup and let's meet!
-                Meetups happen every Saturday in Dublin. New fans welcome! 
-            </p>
-            <h2>Join our book club
-            </h2>
-            <h3 id="enter">Enter your email address to get updates of our monthly meetups where we discuss Robin Hobb books! </h3>
-            <div class="email">
-                <label for="email-field" class="email-field">Email Address</label>
-                <br>
-                <input id="email-field" type="email" name="email" required>
-                <br>
-                <input class="email" type="submit" value="Join book club" name="subscribe">
-            </div>
-        </section>
-        <section>
-            <div class="meetup-times">
-                <ul>
-                    <li><i class="fa-solid fa-calendar-check"></i> Every Saturday</li>
-                    <li><i class="fa-solid fa-location-pin"></i> In Dublin City</li>
-                    <li><i class="fa-solid fa-question"></i> Click the join button to find out more!</li>
-                </ul>
-            </div>
-            <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152515.98633729748!2d-6.385786721003542!3d53.324238067083755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin%2C%20Ireland!5e0!3m2!1sen!2ses!4v1650618416850!5m2!1sen!2ses" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </section>
-    </form>
-<footer>
-        <h2>Find out more about Robin Hobb!</h2>
-        <ul class="social-networks">
-            <li>
-                <a href="https://www.facebook.com/robin.hobb" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Facebook page (opens in new tab)">
-                    <i class="fa-brands fa-facebook-f"></i></a></li>
-            <li>
-                <a href="http://www.robinhobb.com/" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's blog (opens in new tab)">
-                    <i class="fa-solid fa-blog"></i></a></li>
-            <li>
-                <a href="https://www.amazon.com/Robin-Hobb/e/B000AP7LIY" target="_blank" rel="noopener" aria-label="Visit Amazon to buy her books (opens in new tab)">
-                    <i class="fa-brands fa-amazon"></i></a></li>
-            <li>
-                <a href="https://www.instagram.com/therealrobinhobb/?hl=en" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Instagram page (opens in new tab)">
-                    <i class="fa-brands fa-instagram"></i></a></li>
+      </nav>
+      <div class="p-4" id="slideElement">
+        <p
+          class="megan pt-6 w-100 text-2lg text-gray-700 text-opacity-90 whitespace-nowrap"
+        >
+          A pseudonym used by Megan Lindholm
+        </p>
+      </div>
+    </header>
+    <body></body>
+    <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+      <div
+        class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+      >
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+          >© 2023
+          <a
+            href="https://www.linkedin.com/in/jody-murray-4b6818234/"
+            class="transform hover:scale-135 transition-all"
+            >Robin Hobb Fan Page</a
+          >. All Rights Reserved.
+        </span>
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+          <a
+            href="https://github.com/JodyMurray"
+            class="transform hover:scale-135 transition-all"
+            >Projects by Jody Murray</a
+          >
+        </span>
+        <ul
+          class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+        >
+          <li>
+            <a
+              href="https://www.linkedin.com/in/jody-murray-4b6818234/"
+              target="_blank"
+              class="mr-4 hover:underline md:mr-6"
+              >Linkedin</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/JodyMurray"
+              class="mr-4 hover:underline md:mr-6"
+              >GitHub</a
+            >
+          </li>
+          <li>
+            <a href="mailto:jodyamm@hotmail.com" class="hover:underline"
+              >Send Email</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
-<!-- font awesome script -->
-<script src="https://kit.fontawesome.com/205330c142.js" crossorigin="anonymous"></script>
-</body>
+    <!-- font awesome script -->
+    <script
+      src="https://kit.fontawesome.com/205330c142.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/script.js/2.0.2/script.min.js"
+      integrity="sha512-UWtTDM6wtl/qutDD6i1JOGZGiEd92dveVzuLl8sMBkMHlOHcbZdexM7ZrKkeaugW7vhqDnWc2pPD/ohEV+BBbg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <!-- script to initialize animation library -->
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
