--- a/meetups.html
+++ b/meetups.html
@@ -45,7 +45,38 @@
         </p>
       </div>
     </header>
-    <body></body>
+    <body>
+      <section class="bg-gray-50 py-12">
+        <div class="container mx-auto flex flex-col items-center">
+          <h2 class="text-3xl font-bold mb-6">Subscribe to Our Newsletter</h2>
+          <p class="text-gray-600 mb-8">
+            Stay updated with the latest news and updates from Robin Hobb's
+            world.
+          </p>
+          <form class="w-full max-w-md">
+            <div
+              class="flex items-center border-b border-b-2 border-gray-500 py-2"
+            >
+              <input
+                class="newsletter appearance-none rounded border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
+                type="email"
+                placeholder="Your Email Address"
+                aria-label="Email Address"
+              />
+              <button
+                class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                type="button"
+              >
+                Subscribe
+              </button>
+            </div>
+            <p class="text-gray-600 text-sm mt-2">
+              We respect your privacy and won't share your email with anyone.
+            </p>
+          </form>
+        </div>
+      </section>
+    </body>
     <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
       <div
         class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
