--- a/meetups.html
+++ b/meetups.html
@@ -23,120 +23,114 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Robin Hobb Fan Page</title>
   </head>
-  <body>
-    <header class="bg-green-100 nav h-full">
-      <a href="index.html">
-        <h1 id="logo" class="text-4xl font-bold tracking-tight sm:text-6xl">
-          <img src="assets/images/logoRobin.png" class="" alt="" />
-        </h1>
-      </a>
-      <nav class="space-x-2 py-3 text-gray-800">
-        <ul id="menu-bar">
-          <li><a href="meetups.html" class="active">Meetups</a></li>
-          <li><a href="collection.html" class="active">Collection</a></li>
-          <li><a href="index.html" class="active">Home</a></li>
-        </ul>
-      </nav>
-      <div class="p-4" id="slideElement">
-        <p
-          class="megan pt-6 w-100 text-2lg text-gray-700 text-opacity-90 whitespace-nowrap"
-        >
-          A pseudonym used by Megan Lindholm
-        </p>
-      </div>
-    </header>
-    <body>
-      <section class="bg-gray-50 py-12">
-        <div class="container mx-auto flex flex-col items-center">
-          <h2 class="text-3xl font-bold mb-6">Subscribe to Our Newsletter</h2>
-          <p class="text-gray-600 mb-8">
-            Stay updated with the latest news and updates from Robin Hobb's
-            world.
-          </p>
-          <form class="w-full max-w-md">
-            <div
-              class="flex items-center border-b border-b-2 border-gray-500 py-2"
-            >
-              <input
-                class="newsletter appearance-none rounded border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
-                type="email"
-                placeholder="Your Email Address"
-                aria-label="Email Address"
-              />
-              <button
-                class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                type="button"
-              >
-                Subscribe
-              </button>
-            </div>
-            <p class="text-gray-600 text-sm mt-2">
-              We respect your privacy and won't share your email with anyone.
-            </p>
-          </form>
-        </div>
-      </section>
-    </body>
-    <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
-      <div
-        class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+  <header class="bg-green-100 nav h-full">
+    <a href="index.html">
+      <h1 id="logo" class="text-4xl font-bold tracking-tight sm:text-6xl">
+        <img src="assets/images/logoRobin.png" class="" alt="" />
+      </h1>
+    </a>
+    <nav class="space-x-2 py-3 text-gray-800">
+      <ul id="menu-bar">
+        <li><a href="meetups.html" class="active">Meetups</a></li>
+        <li><a href="collection.html" class="active">Collection</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+      </ul>
+    </nav>
+    <div class="p-4" id="slideElement">
+      <p
+        class="megan pt-6 w-100 text-2lg text-gray-700 text-opacity-90 whitespace-nowrap"
       >
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-          >© 2023
+        A pseudonym used by Megan Lindholm
+      </p>
+    </div>
+  </header>
+  <body>
+    <section class="bg-gray-50 py-12">
+      <div class="container mx-auto flex flex-col items-center">
+        <h2 class="text-3xl font-bold mb-6">Subscribe to Our Newsletter</h2>
+        <p class="text-gray-600 mb-8">
+          Stay updated with the latest news and updates from Robin Hobb's world.
+        </p>
+        <form method="post">
+          <input
+            class="newsletter appearance-none rounded border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
+            type="email"
+            placeholder="Your Email Address"
+            aria-label="Email Address"
+          />
+          <button
+            class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            type="button"
+            onclick="sendEmail()"
+            type="button"
+            value="Send Email"
+          >
+            Subscribe
+          </button>
+        </form>
+      </div>
+    </section>
+  </body>
+  <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+    <div
+      class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between"
+    >
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+        >© 2023
+        <a
+          href="https://www.linkedin.com/in/jody-murray-4b6818234/"
+          class="transform hover:scale-135 transition-all"
+          >Robin Hobb Fan Page</a
+        >. All Rights Reserved.
+      </span>
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+        <a
+          href="https://github.com/JodyMurray"
+          class="transform hover:scale-135 transition-all"
+          >Projects by Jody Murray</a
+        >
+      </span>
+      <ul
+        class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
+      >
+        <li>
           <a
             href="https://www.linkedin.com/in/jody-murray-4b6818234/"
-            class="transform hover:scale-135 transition-all"
-            >Robin Hobb Fan Page</a
-          >. All Rights Reserved.
-        </span>
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+            target="_blank"
+            class="mr-4 hover:underline md:mr-6"
+            >Linkedin</a
+          >
+        </li>
+        <li>
           <a
             href="https://github.com/JodyMurray"
-            class="transform hover:scale-135 transition-all"
-            >Projects by Jody Murray</a
+            class="mr-4 hover:underline md:mr-6"
+            >GitHub</a
           >
-        </span>
-        <ul
-          class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0"
-        >
-          <li>
-            <a
-              href="https://www.linkedin.com/in/jody-murray-4b6818234/"
-              target="_blank"
-              class="mr-4 hover:underline md:mr-6"
-              >Linkedin</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/JodyMurray"
-              class="mr-4 hover:underline md:mr-6"
-              >GitHub</a
-            >
-          </li>
-          <li>
-            <a href="mailto:jodyamm@hotmail.com" class="hover:underline"
-              >Send Email</a
-            >
-          </li>
-        </ul>
-      </div>
-    </footer>
-    <!-- font awesome script -->
-    <script
-      src="https://kit.fontawesome.com/205330c142.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/script.js/2.0.2/script.min.js"
-      integrity="sha512-UWtTDM6wtl/qutDD6i1JOGZGiEd92dveVzuLl8sMBkMHlOHcbZdexM7ZrKkeaugW7vhqDnWc2pPD/ohEV+BBbg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
-    <!-- script to initialize animation library -->
-    <script>
-      AOS.init();
-    </script>
-  </body>
+        </li>
+        <li>
+          <a href="mailto:jodyamm@hotmail.com" class="hover:underline"
+            >Send Email</a
+          >
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <!-- font awesome script -->
+  <script
+    src="https://kit.fontawesome.com/205330c142.js"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/script.js/2.0.2/script.min.js"
+    integrity="sha512-UWtTDM6wtl/qutDD6i1JOGZGiEd92dveVzuLl8sMBkMHlOHcbZdexM7ZrKkeaugW7vhqDnWc2pPD/ohEV+BBbg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+  <!-- script to initialize animation library -->
+  <script>
+    AOS.init();
+  </script>
 </html>
