--- a/newsletter.html
+++ b/newsletter.html
@@ -31,7 +31,7 @@
     </a>
     <nav class="space-x-2 py-3 text-gray-800">
       <ul id="menu-bar">
-        <li><a href="meetups.html" class="active">Meetups</a></li>
+        <li><a href="newsletter.html" class="active">Newsletter</a></li>
         <li><a href="collection.html" class="active">Collection</a></li>
         <li><a href="index.html" class="active">Home</a></li>
       </ul>
