Edit: Comment out old media query to begin tailwind responsive design

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     <title>Robin Hobb Fan Page</title>
   </head>
   <body>
-    <header class="bg-green-100 nav h-full">
+    <header class="bg-green-100 nav h-full mx-auto">
       <a href="index.html">
         <h1 id="logo" class="text-4xl font-bold tracking-tight sm:text-6xl">
           <img src="assets/images/logoRobin.png" alt="" />
         </h1>
       </a>
       <nav class="space-x-2 py-3 text-gray-800">
-        <ul id="menu-bar">
-          <li><a href="newsletter.html" class="active">Newsletter</a></li>
-          <li><a href="collection.html" class="active">Collection</a></li>
-          <li><a href="index.html" class="active">Home</a></li>
-        </ul>
+          <ul id="menu-bar" class="sm:hidden">
+            <li><a href="newsletter.html" class="active">Newsletter</a></li>
+            <li><a href="collection.html" class="active">Collection</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+          </ul>
       </nav>
       <div class="p-4" id="slideElement">
         <p
