--- a/newsletter.html
+++ b/newsletter.html
@@ -51,18 +51,17 @@
         <p class="text-gray-600 mb-8">
           Stay updated with the latest news and updates from Robin Hobb's world.
         </p>
-        <form method="post">
+        <form method="post" class="flex items-center">
           <input
-            class="newsletter appearance-none rounded border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
+            class="newsletter appearance-none rounded-l-lg border-none w-full text-gray-700 py-2 px-4 leading-tight focus:outline-none"
             type="email"
             placeholder="Your Email Address"
             aria-label="Email Address"
           />
           <button
-            class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            class="bg-green-500 hover:bg-green-700 text-gray-800 font-bold rounded-r-lg py-2 px-4 focus:outline-none focus:shadow-outline"
             type="button"
             onclick="sendEmail()"
-            type="button"
             value="Send Email"
           >
             Subscribe
@@ -70,6 +69,7 @@
         </form>
       </div>
     </section>
+    
   </body>
   <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
     <div
