--- a/newsletter.html
+++ b/newsletter.html
@@ -45,7 +45,7 @@
     </div>
   </header>
   <body>
-    <section class="bg-gray-50 py-12">
+    <section class="bg-gray-200 py-12 newsletter-section relative h-64 object-cover w-full h-full">
       <div class="container mx-auto flex flex-col items-center">
         <h2 class="text-3xl font-bold mb-6">Subscribe to Our Newsletter</h2>
         <p class="text-gray-600 mb-8">
@@ -53,13 +53,13 @@
         </p>
         <form method="post" class="flex items-center">
           <input
-            class="newsletter appearance-none rounded-l-lg border-none w-full text-gray-700 py-2 px-4 leading-tight focus:outline-none"
+            class="newsletter-input appearance-none rounded-l-lg border-none w-full text-gray-700 py-2 px-4 leading-tight focus:outline-none"
             type="email"
             placeholder="Your Email Address"
             aria-label="Email Address"
           />
           <button
-            class="bg-green-500 hover:bg-green-700 text-gray-800 font-bold rounded-r-lg py-2 px-4 focus:outline-none focus:shadow-outline"
+            class="newsletter-button bg-green-500 hover:bg-green-700 text-gray-800 font-bold rounded-r-lg py-2 px-4 focus:outline-none focus:shadow-outline"
             type="button"
             onclick="sendEmail()"
             value="Send Email"
