Edit: Add update on progress to README file and include screenshots of improvements

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </h1>
       </a>
       <nav class="space-x-2 py-3 text-gray-800">
-          <ul id="menu-bar" class="sm:hidden">
-            <li><a href="newsletter.html" class="active">Newsletter</a></li>
-            <li><a href="collection.html" class="active">Collection</a></li>
-            <li><a href="index.html" class="active">Home</a></li>
-          </ul>
+        <ul id="menu-bar" class="sm:hidden">
+          <li><a href="newsletter.html" class="active">Newsletter</a></li>
+          <li><a href="collection.html" class="active">Collection</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+        </ul>
       </nav>
       <div class="p-4" id="slideElement">
         <p
@@ -151,19 +151,11 @@
       />
     </div>
 
-    <!-- <blockquote class="border-l-4 border-blue-500 bg-gray-100 p-4 my-4 mb-9">
-      <p class="text-lg italic text-gray-800">
-        "Before you kill him, think of what you take from him. Remember what it
-        is to be alive."
-      </p>
-      <cite class="block text-right mt-2 text-gray-600">— Nighteyes in "Fool's Errand"</cite>
-    </blockquote> -->
-
     <div
       class="bg-gradient-to-b from-purple-200 to-green-100 py-8 bg-opacity-50"
     >
       <div class="container mx-auto px-4">
-        <h2 class="text-3xl font-bold mb-8 text-center text-white">
+        <h2 class="text-3xl font-bold mb-8 text-center text-green">
           Reader Reviews
         </h2>
         <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
